<resources>
    <string name="app_name">About Me</string>
    <string name="my_name">Vinson Lau</string>
    <string name="my_pic">My Profile Picture</string>
    <string name="my_profile_description">
           DOB: 1/1/2020
        \n Address: TARUC Hostel
        \n Hobbies: Attend Mobile Application Development classes
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
        \n
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">done</string>
</resources>
